Make sure toggle isn't overflow hidden by default

--- a/packages/components/src/components/ui/sc-toggle/sc-toggle.scss
+++ b/packages/components/src/components/ui/sc-toggle/sc-toggle.scss
@@ -92,7 +92,6 @@
   }
 }
 .details__body {
-  overflow: hidden;
   border-top: solid var(--sc-input-border-width) var(--sc-input-border-color);
 }
 .details--shady {
